fix checkstyle violations